--- a/Modules/Module-3/Finish/BotExample/BotExample/packages.config
+++ b/Modules/Module-3/Finish/BotExample/BotExample/packages.config
@@ -1,15 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="3.5.2" targetFramework="net46" />
+  <package id="Autofac" version="4.1.1" targetFramework="net46" />
+  <package id="Bing.RestClient" version="0.8.0" targetFramework="net46" />
   <package id="Chronic.Signed" version="0.3.2" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net46" />
-  <package id="Microsoft.Bot.Builder" version="3.0.0" targetFramework="net46" />
-  <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.2.206221351" targetFramework="net46" />
-  <package id="Microsoft.Rest.ClientRuntime" version="1.8.2" targetFramework="net46" />
+  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net46" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net46" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net46" />
+  <package id="Microsoft.Bot.Builder" version="3.3.0" targetFramework="net46" />
+  <package id="Microsoft.Bot.Builder.Location" version="1.2.0" targetFramework="net46" />
+  <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.3.308261200" targetFramework="net46" />
+  <package id="Microsoft.Net.Http" version="2.2.22" targetFramework="net46" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.3" targetFramework="net46" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net46" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.206221351" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
+  <package id="PortableRest" version="3.0.0" targetFramework="net46" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.3.308261200" targetFramework="net46" />
 </packages>
