--- a/Modules/Module-5/Finish/BotExample/BotExample/packages.config
+++ b/Modules/Module-5/Finish/BotExample/BotExample/packages.config
@@ -16,6 +16,7 @@
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net46" />
   <package id="Microsoft.ProjectOxford.Common" version="1.0.324" targetFramework="net46" />
   <package id="Microsoft.ProjectOxford.Emotion" version="1.0.336" targetFramework="net46" />
+  <package id="Microsoft.ProjectOxford.Vision" version="1.0.372" targetFramework="net46" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.3" targetFramework="net46" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net46" />
