--- a/Modules/Module-5/Finish/BotExample/BotExample/Web.config
+++ b/Modules/Module-5/Finish/BotExample/BotExample/Web.config
@@ -9,6 +9,10 @@
     <add key="BotId" value="YourBotId" />
     <add key="MicrosoftAppId" value="" />
     <add key="MicrosoftAppPassword" value="" />
+    <add key="LUISModelID" value="put your id here"/>
+    <add key="LUISSubscriptionKey" value="put your key here"/>
+    <add key="EmotionAPIKey" value="put your key here"/>
+    <add key="ComputerVisionAPIKey" value="put your key here"/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
