--- a/Modules/Module-4/Start/BotExample/BotExample.csproj
+++ b/Modules/Module-4/Start/BotExample/BotExample.csproj
@@ -120,9 +120,13 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
+    <Compile Include="Dialogs\MyFirstDialog.cs" />
+    <Compile Include="Extensions\CharacterExtensions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Model\BigBangTheoryClient.cs" />
+    <Compile Include="Model\Character.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
