--- a/Modules/Module-4/Start/BotExample/BotExample.csproj
+++ b/Modules/Module-4/Start/BotExample/BotExample.csproj
@@ -121,6 +121,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
     <Compile Include="Dialogs\MyFirstDialog.cs" />
+    <Compile Include="Dialogs\MyFirstLuisDialog.cs" />
     <Compile Include="Extensions\CharacterExtensions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
