--- a/Modules/Module-4/Start/BotExample/Web.Release.config
+++ b/Modules/Module-4/Start/BotExample/Web.Release.config
@@ -14,6 +14,10 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <appSettings>
+    <add key="MicrosoftAppId" value="Put your id here" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="MicrosoftAppPassword" value="Put your password here" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+  </appSettings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
