--- a/Modules/Module-2/Finish/BotExample/BotExample/Web.Release.config
+++ b/Modules/Module-2/Finish/BotExample/BotExample/Web.Release.config
@@ -4,8 +4,8 @@
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <appSettings>
-    <add key="MicrosoftAppId" value="2b5d654c-2309-4ee4-9115-f29daf1fd56b" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
-    <add key="MicrosoftAppPassword" value="XNLanPrErQay5M7jkqkR1dc" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="MicrosoftAppId" value="insert id here" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="MicrosoftAppPassword" value="insert password here" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
   <!--
     In the example below, the "SetAttributes" transform will change the value of 
